# data-pipeline

./: README.md  prd.md
.github/workflows/: deploy.yaml
webtoon-pipeline/: Dockerfile  pyproject.toml
webtoon-pipeline/src/: worker.py
webtoon-pipeline/src/agents/: __init__.py  face_identify.py  local_extract.py
webtoon-pipeline/src/config/: chroma.py  db.py  s3.py  settings.py
webtoon-pipeline/src/operators/: embedding.py  ocr.py  yolo.py
