[project]
name = "webtoon-pipeline"
version = "0.1.0"
description = "Webtoon analysis pipeline — Faust/Kafka worker"
dependencies = [
    "faust-streaming==0.11.3",
    "kafka-python-ng>=2.2.2", # 잘못된 MetadataRequest 구조를 정상화합니다.
    "aiokafka==0.14.0",
    "psycopg2-binary==2.9.11",
    "boto3==1.38.21",
    "requests==2.32.5",
    "pillow==11.2.1",
    "numpy==2.2.6",
    "onnxruntime==1.21.1",
    "paddlepaddle",
    "paddleocr==3.5.0",
    "ultralytics==8.3.151",
    "chromadb>=0.6.0",
]
requires-python = "==3.12.*"
